$Id: History,v 1.13 2000-04-12 08:25:41 gcosmo Exp $
----------------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

             History file for geometry/solids/BREPS
	     --------------------------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

11/04/2000 : J. Allison
- Removed implementations of G4VisExtent GetExtent() in most sub-classes
  of G4VSolid (a default implementation exists in G4VSolid).
  Files changed: G4BREPSolid[.hh.cc].
- All implementations of DescribeYourselfTo (G4VGraphicsScene& scene) const
  now correctly written: scene.AddThis(*this).
  Files changed: G4BREPSolidOpenPCone.cc.

25/02/2000 : G. Cosmo		  breps-V01-00-02
 G4BSplineSurface[.hh.cc]
   - fixed dynamic memory allocation problem with creation of temporary
     hits and manipulation of knots.
   - rationalized dependencies over G4UVHit, G4ControlPoints and
     G4BoundingBox3D classes.
   - added initialization of pointers in constructor where missing.
 G4BSplineSurfaceWithKnots[.hh.cc]
   - created dummy classes.
 G4ConicalSurface.cc
   - Modified diagnostic message.
 G4PointRat.hh
   - Removed useless inclusion of G4UVHit.hh.
 G4UVHit.hh
   - Added missing initialization of data-members where needed.
   - Initialized 'next' pointer to zero in costructor.
 test/stepfiles
   - G4msgc_barrel_solid.stp was corrupted. Fixed.